Added option to save model from checkpoint

--- a/training_global_dad.ipynb
+++ b/training_global_dad.ipynb
@@ -460,14 +460,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
     "# Load fine-tuned local_net from Google Drive\n",
     "local_net = LocalNet().to(device)\n",
-    "# Load the state dictionary from the saved file\n",
-    "state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/LocalNet/Fine-tuning/Trained Models/local_net_finetuned.pth', map_location=device)\n",
-    "# Update the local_net model's state dictionary\n",
-    "local_net.load_state_dict(state_dict)\n",
-    "\n",
-    "\n",
     "global_net = GlobalNet().to(device)\n",
     "dad_head = DADHead().to(device)\n",
     "\n",
@@ -480,7 +476,7 @@
     "\n",
     "# Step 2: Load the checkpoint\n",
     "# Replace '/path/to/checkpoint.ckpt' with the path to your checkpoint file\n",
-    "checkpoint = torch.load(\"/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Checkpoints/epoch=151-val_loss=0.41.ckpt\")\n",
+    "checkpoint = torch.load(\"/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Checkpoints/V5/epoch=17188-val_loss=0.03329.ckpt\")\n",
     "joint_train_module.load_state_dict(checkpoint['state_dict'])\n",
     "\n",
     "# Step 3: Extract and save the individual models\n",
@@ -489,8 +485,8 @@
     "dad_head = joint_train_module.dad_head\n",
     "\n",
     "# Save the state dictionaries of the individual models\n",
-    "torch.save(global_net.state_dict(), '/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/global_net.pth')\n",
-    "torch.save(dad_head.state_dict(), '/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/dad_head.pth')\n"
+    "torch.save(global_net.state_dict(), '/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/V5/global_net_v5.pth')\n",
+    "torch.save(dad_head.state_dict(), '/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/V5/dad_head_v5.pth')\n"
    ]
   }
  ],
