--- a/inference_mvtec.ipynb
+++ b/inference_mvtec.ipynb
@@ -196,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anomaly_detector = AnomalyDetector(None, None, None, automatic_eval=False)\n",
+    "anomaly_detector = AnomalyDetector(None, None, None, none=True)\n",
     "patches, binary_masks = anomaly_detector.create_patches_and_masks(images[0])\n",
     "\n",
     "# Reverse the normalization process done by data module\n",
@@ -281,7 +281,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anomaly_score_map = anomaly_detector.detect_anomalies(images[0].unsqueeze(0))"
+    "image = images[3]\n",
+    "anomaly_score_map = anomaly_detector.detect_anomalies(image.unsqueeze(0))"
    ]
   },
   {
@@ -295,24 +296,26 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import Normalize\n",
     "from PIL import Image\n",
+    "from scipy.ndimage import gaussian_filter\n",
     "\n",
-    "# Assuming images[0] is a tensor of shape [C, H, W] in the range [0, 1]\n",
-    "if images[0].max() > 1:\n",
-    "    images[0] = images[0] / 255.0  # Normalize to [0, 1] if necessary\n",
+    "# Apply a Gaussian blur to the anomaly map\n",
+    "smoothed_anomaly_map = gaussian_filter(anomaly_score_map, sigma=5)  # You can adjust the sigma value\n",
+    "\n",
+    "# Visualize the smoothed anomaly map\n",
+    "plt.imshow(smoothed_anomaly_map, cmap='jet')  # Using the same colormap\n",
+    "plt.colorbar()  # To see the range of values on the smoothed anomaly score map\n",
+    "plt.axis('off')  # Turn off axis numbers and ticks\n",
+    "plt.show()\n",
     "\n",
     "# Convert to numpy array and transpose to HWC format for image display\n",
-    "image_np = images[0].cpu().detach().numpy().transpose(1, 2, 0)\n",
+    "image_np = image.cpu().detach().numpy().transpose(1, 2, 0)\n",
     "image_pil = Image.fromarray((image_np * 255).astype(np.uint8))\n",
     "\n",
-    "# Assuming 'anomaly_map' is the anomaly map as a 2D numpy array\n",
-    "# Resize anomaly_map to match the original image size\n",
-    "anomaly_map_resized = np.array(Image.fromarray(anomaly_map).resize(image_pil.size, resample=Image.BILINEAR))\n",
-    "\n",
     "# Normalize the resized anomaly map to the range [0, 1]\n",
-    "normalized_anomaly_map = (anomaly_map_resized - np.min(anomaly_map_resized)) / (np.max(anomaly_map_resized) - np.min(anomaly_map_resized))\n",
+    "normalized_anomaly_map = (smoothed_anomaly_map - np.min(smoothed_anomaly_map)) / (np.max(smoothed_anomaly_map) - np.min(smoothed_anomaly_map))\n",
     "\n",
     "# Apply a colormap to the normalized anomaly map\n",
-    "colormap = plt.cm.hot\n",
+    "colormap = plt.cm.jet\n",
     "normed_data = Normalize(0, 1)(normalized_anomaly_map)\n",
     "mapped_data = colormap(normed_data)\n",
     "\n",
@@ -320,7 +323,7 @@
     "mapped_data_rgb = (mapped_data[..., :3] * 255).astype(np.uint8)\n",
     "\n",
     "# Overlay the colored anomaly map onto the original image\n",
-    "blended_image = Image.blend(image_pil.convert(\"RGBA\"), Image.fromarray(mapped_data_rgb).convert(\"RGBA\"), alpha=0.5)\n",
+    "blended_image = Image.blend(image_pil.convert(\"RGBA\"), Image.fromarray(mapped_data_rgb).convert(\"RGBA\"), alpha=0.48)\n",
     "\n",
     "# Show the blended image\n",
     "plt.imshow(blended_image)\n",
