--- a/xray_training.ipynb
+++ b/xray_training.ipynb
@@ -82,6 +82,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Fine-tune Local-Net"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Load the config"
    ]
   },
@@ -109,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mount current Colab session to Google Drive (training/val images are stored here)"
+    "Mount current Colab session to Google Drive"
    ]
   },
   {
@@ -412,6 +419,393 @@
     "\n",
     "# Save the state dictionaries of the individual models\n",
     "torch.save(local_net.state_dict(), '/content/drive/MyDrive/AnomalyDetection/LocalNet/Fine-tuning/Trained Models/V4/local_net_finetuned_v4.pth')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train Global-Net and DAD-head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pytorch_lightning as pl\n",
+    "import yaml\n",
+    "import torch\n",
+    "import matplotlib.pyplot as plt\n",
+    "import json\n",
+    "from google.colab import drive\n",
+    "\n",
+    "from model.local_net import LocalNet\n",
+    "from model.dad import DADHead\n",
+    "from model.iad import iad_head\n",
+    "from model.global_net import GlobalNet\n",
+    "from data_loader.joint_training_data_loader import JointTrainingDataModule\n",
+    "from model.joint_training_module import JointGlobalDADTrainingModule\n",
+    "\n",
+    "# autoreload imported modules\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./configs/global_dad_config.yaml', 'r') as f:\n",
+    "    config = yaml.safe_load(f)\n",
+    "\n",
+    "# Reproducibility\n",
+    "pl.seed_everything(config['seed'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load and visualize data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mount current Colab session to Google Drive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Will provide you with an authentication link\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get filepaths to train/val images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split_dir = \"./data/splits\"\n",
+    "\n",
+    "train_csv_ixi = os.path.join(split_dir, 'ixi_normal_train.csv')\n",
+    "train_csv_fastMRI = os.path.join(split_dir, 'normal_train.csv')\n",
+    "val_csv = os.path.join(split_dir, 'normal_val.csv')\n",
+    "# Load csv files\n",
+    "train_files_ixi = pd.read_csv(train_csv_ixi)['filename'].tolist()\n",
+    "train_files_fastMRI = pd.read_csv(train_csv_fastMRI)['filename'].tolist()\n",
+    "val_files = pd.read_csv(val_csv)['filename'].tolist()\n",
+    "# Combine files\n",
+    "train_image_paths = train_files_ixi + train_files_fastMRI\n",
+    "val_image_paths = val_files\n",
+    "\n",
+    "print(f\"Using {len(train_files_ixi)} IXI images \"\n",
+    "      f\"and {len(train_files_fastMRI)} fastMRI images for training. \"\n",
+    "      f\"Using {len(val_files)} images for validation.\")\n",
+    "\n",
+    "# Ensure that it's file paths\n",
+    "print(train_image_paths)\n",
+    "print(val_image_paths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_module = JointTrainingDataModule(\n",
+    "    train_image_paths, \n",
+    "    val_image_paths, \n",
+    "    batch_size=config['batch_size'], \n",
+    "    num_workers=2, \n",
+    "    caching_strategy='at-init'\n",
+    ")\n",
+    "\n",
+    "print(f\"Number of training images: {len(train_image_paths)}\")\n",
+    "print(f\"Number of validation images: {len(val_image_paths)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize patches, images, binary masks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make sure batch_size in data_module is equal to BATCH_SIZE\n",
+    "\n",
+    "BATCH_SIZE=4\n",
+    "\n",
+    "# Reverse the normalization process done by ImageNetDataModule\n",
+    "# to avoid the following error:\n",
+    "# WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
+    "def denormalize(tensor):\n",
+    "    mean = torch.tensor([0.485, 0.456, 0.406]).view(1, 3, 1, 1)\n",
+    "    std = torch.tensor([0.229, 0.224, 0.225]).view(1, 3, 1, 1)\n",
+    "    tensor = tensor * std + mean  # Reverses the normalization in-place\n",
+    "    return tensor.clamp(0, 1)  # Ensures the pixel values are within [0, 1]\n",
+    "\n",
+    "\n",
+    "# Retrieve one batch of images\n",
+    "I, patches, binary_masks, labels = next(iter(data_module.train_dataloader()))\n",
+    "\n",
+    "# Denormalize the patches for visualization\n",
+    "patches = denormalize(patches)\n",
+    "\n",
+    "fig1, ax1 = plt.subplots(1, BATCH_SIZE, figsize=(20, 8))\n",
+    "\n",
+    "# Plotting patches\n",
+    "for i in range(BATCH_SIZE):\n",
+    "    # Permute the tensor to the format (H, W, C)\n",
+    "    image = patches[i].permute(1, 2, 0)\n",
+    "\n",
+    "    # Display the image\n",
+    "    ax1[i].imshow(image.cpu().numpy())\n",
+    "    ax1[i].axis('on')\n",
+    "\n",
+    "fig2, ax2 = plt.subplots(1, BATCH_SIZE, figsize=(20, 8))\n",
+    "\n",
+    "# Plotting images\n",
+    "for i in range(BATCH_SIZE):\n",
+    "    # Permute the tensor to the format (H, W, C)\n",
+    "    image = I[i].permute(1, 2, 0)\n",
+    "\n",
+    "    # Display the image\n",
+    "    ax2[i].imshow(image.cpu().numpy())\n",
+    "    ax2[i].axis('on')\n",
+    "\n",
+    "fig3, ax3 = plt.subplots(1, BATCH_SIZE, figsize=(20, 8))\n",
+    "for i in range(BATCH_SIZE):\n",
+    "    # Squeeze the tensor to 2D [H, W] if it's 3D [1, H, W]\n",
+    "    mask = binary_masks[i].squeeze()\n",
+    "\n",
+    "    # Display the mask\n",
+    "    ax3[i].imshow(mask.cpu().numpy(), cmap='gray', interpolation='none')\n",
+    "    ax3[i].axis('on')\n",
+    "\n",
+    "plt.show()\n",
+    "\n",
+    "print(labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set up tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard\n",
+    "%tensorboard --logdir lightning_logs/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set up all models for training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming 'device' is either 'cuda' if a GPU is available, otherwise 'cpu'\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# Load fine-tuned local_net from Google Drive\n",
+    "local_net = LocalNet().to(device)\n",
+    "# Load the state dictionary from the saved file\n",
+    "state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/LocalNet/Fine-tuning/Trained Models/V3/local_net_finetuned_v3.pth', map_location=device)\n",
+    "# Update the local_net model's state dictionary\n",
+    "local_net.load_state_dict(state_dict)\n",
+    "\n",
+    "\n",
+    "global_net = GlobalNet().to(device)\n",
+    "dad_head = DADHead().to(device)\n",
+    "\n",
+    "joint_train_module = JointGlobalDADTrainingModule(\n",
+    "    config, \n",
+    "    local_net=local_net, \n",
+    "    global_net=global_net, \n",
+    "    dad_head=dad_head,  \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Calculate number of epochs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Given by paper is batch size of 64 for 50k iterations\n",
+    "# Need to calculate max_epochs\n",
+    "total_iterations = config['iterations']\n",
+    "batch_size = config['batch_size']\n",
+    "num_training_images = len(train_image_paths)\n",
+    "# Calculate max_epochs\n",
+    "max_epochs = total_iterations / (num_training_images / batch_size)\n",
+    "max_epochs = int(max_epochs) + (max_epochs % 1 > 0)  # round up if not an integer\n",
+    "print(f\"Calculated max_epochs: {max_epochs}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create callbacks for training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pytorch_lightning.callbacks import ModelCheckpoint\n",
+    "\n",
+    "# Setup the checkpoint callback\n",
+    "checkpoint_callback = ModelCheckpoint(\n",
+    "    dirpath=\"/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Checkpoints/V3\",  # Path where checkpoints will be saved\n",
+    "    filename=\"{epoch}-{val_loss:.2f}\",  # Filename template\n",
+    "    monitor=\"val_loss\",  # Metric to monitor for saving\n",
+    "    every_n_epochs=1,  # Save every epoch\n",
+    "    save_weights_only=True,  # If True, save only the model weights, not the full model\n",
+    "    save_top_k=3,  # Save the top 3 checkpoints based on val_loss\n",
+    "    save_last=True,  # Also save the last checkpoint to resume training later\n",
+    "    verbose=True  # If True, print a message to stdout for each save\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup new trainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "trainer = pl.Trainer(\n",
+    "    max_epochs=max_epochs,\n",
+    "    accelerator='gpu' if torch.cuda.is_available() else 'cpu',\n",
+    "    devices=1,\n",
+    "    callbacks=[checkpoint_callback],\n",
+    "    logger=[\n",
+    "        pl.loggers.TensorBoardLogger(save_dir='./')\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run joint training (and save trained models)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.fit(joint_train_module, datamodule=data_module)\n",
+    "torch.save(global_net.state_dict(), '/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/V3/global_net_v3.pth')\n",
+    "torch.save(dad_head.state_dict(), '/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/V3/dad_head_v3.pth')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want to load a certain checkpoint and save the models from that checkpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# Load fine-tuned local_net from Google Drive\n",
+    "local_net = LocalNet().to(device)\n",
+    "global_net = GlobalNet().to(device)\n",
+    "dad_head = DADHead().to(device)\n",
+    "\n",
+    "joint_train_module = JointGlobalDADTrainingModule(\n",
+    "    config, \n",
+    "    local_net=local_net, \n",
+    "    global_net=global_net, \n",
+    "    dad_head=dad_head,  \n",
+    ")\n",
+    "\n",
+    "# Step 2: Load the checkpoint\n",
+    "# Replace '/path/to/checkpoint.ckpt' with the path to your checkpoint file\n",
+    "checkpoint = torch.load(\"/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Checkpoints/V5/epoch=17188-val_loss=0.03329.ckpt\")\n",
+    "joint_train_module.load_state_dict(checkpoint['state_dict'])\n",
+    "\n",
+    "# Step 3: Extract and save the individual models\n",
+    "# Assuming `global_net` and `dad_head` are attributes of your joint module\n",
+    "global_net = joint_train_module.global_net\n",
+    "dad_head = joint_train_module.dad_head\n",
+    "\n",
+    "# Save the state dictionaries of the individual models\n",
+    "torch.save(global_net.state_dict(), '/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/V5/global_net_v5.pth')\n",
+    "torch.save(dad_head.state_dict(), '/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/Trained Models/V5/dad_head_v5.pth')\n"
    ]
   }
  ],
