Refactoring data modules, combined ImageNet/MVTec to LocalNet data loader etc

--- a/inference_mvtec.ipynb
+++ b/inference_mvtec.ipynb
@@ -56,7 +56,7 @@
     "from model.dad import DADHead\n",
     "from model.iad import iad_head\n",
     "from model.global_net import GlobalNet\n",
-    "from data_loader.mvtec_inference_data_loader import MVTecInferenceDataModule\n",
+    "from data_loader.inference_data_loader import InferenceDataModule\n",
     "from model.anomaly_detector import AnomalyDetector\n",
     "\n",
     "# autoreload imported modules\n",
@@ -148,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_module = MVTecInferenceDataModule(\n",
+    "data_module = InferenceDataModule(\n",
     "    test_file_paths, \n",
     "    batch_size=1, \n",
     "    num_workers=0, \n",
