--- a/pretraining_localnet.ipynb
+++ b/pretraining_localnet.ipynb
@@ -63,8 +63,7 @@
     "from model.local_net import LocalNet\n",
     "from model.model_utils import load_resnet_18_teacher_model\n",
     "from model.student_training_module import StudentTrainingModule\n",
-    "from data_loader.image_net_data_loader import ImageNetDataModule\n",
-    "from data_loader.mvtec_data_loader import MVTecDataModule\n",
+    "from data_loader.localnet_data_loader import LocalNetDataModule\n",
     "from model.one_layer_decoder import OneLayerDecoder\n",
     "\n",
     "# autoreload imported modules\n",
@@ -89,35 +88,6 @@
    "metadata": {},
    "source": [
     "## 1. Distillation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pre-processing in accordance (*) to ResNet-18 documentation\n",
-    "@ https://pytorch.org/vision/main/models/generated/torchvision.models.resnet18.html\n",
-    "\n",
-    "(*) According to documentation it's first resized to 256x256 then\n",
-    "center cropped to 224x224. This step has been skipped, \n",
-    "and it is instead resized directly to 224x224. \n",
-    "The reason for this is because the input patch size to Local-Net is 33x33\n",
-    "and ResNet-18 has input size 224x224, \n",
-    "meaning that resizing to 256x256 and then cropping to desired size (224x224)\n",
-    "would result in altering the original spatial relationships and scale of the features of the image.\n",
-    "This could potentially lead to a mismatch when comparing features extracted from the resized and \n",
-    "cropped image by ResNet-18 with those extracted from the original 33x33 image by Local-Net.\n",
-    "\n",
-    "Pre-processing the data for distillation consists of 4 major steps:\n",
-    "\n",
-    "1. Load images from Image-Net\n",
-    "2. Resize images to 256 x 256 (done by most applications, and mentioned in Supplementary Material)\n",
-    "3. Extract 33 x 33 patches from each resized image\n",
-    "4. Create two separate transform pipelines\n",
-    "    * For Local-Net: Convert the 33x33 patches to PyTorch tensors and normalize them\n",
-    "    * For ResNet-18 (teacher model): Resize the 33x33 patches to 224x224, then convert to tensors and normalize\n",
-    "\n",
-    "<span style=\"color:yellow\"> **Note**: All pre-processing is done by *ImageNetDataModule* provided in *image_net_data_loader.py* </span>"
    ]
   },
   {
@@ -218,7 +188,7 @@
     "train_image_paths = load_image_paths('/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/train_image_local_paths.json')\n",
     "val_image_paths = load_image_paths('/content/drive/MyDrive/AnomalyDetection/Datasets/ImageNet/val_image_local_paths.json')\n",
     "\n",
-    "data_module = ImageNetDataModule(\n",
+    "data_module = LocalNetDataModule(\n",
     "    train_image_paths, \n",
     "    val_image_paths, \n",
     "    batch_size=config['batch_size'], \n",
@@ -247,7 +217,7 @@
     "\n",
     "BATCH_SIZE=config['batch_size']\n",
     "\n",
-    "# Reverse the normalization process done by ImageNetDataModule\n",
+    "# Reverse the normalization process done by LocalNetDataModule\n",
     "# to avoid the following error:\n",
     "# WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
     "def denormalize(tensor):\n",
@@ -590,7 +560,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_module = MVTecDataModule(\n",
+    "data_module = LocalNetDataModule(\n",
     "    train_image_paths, \n",
     "    val_image_paths, \n",
     "    batch_size=config['batch_size'], \n",
@@ -619,7 +589,7 @@
     "\n",
     "BATCH_SIZE=config['batch_size']\n",
     "\n",
-    "# Reverse the normalization process done by ImageNetDataModule\n",
+    "# Reverse the normalization process done by LocalNetDataModule\n",
     "# to avoid the following error:\n",
     "# WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
     "def denormalize(tensor):\n",
