--- a/training_global_dad.ipynb
+++ b/training_global_dad.ipynb
@@ -220,7 +220,7 @@
     "\n",
     "BATCH_SIZE=4\n",
     "\n",
-    "# Reverse the normalization process done by ImageNetDataModule\n",
+    "# Reverse the normalization process done by LocalNetDataModule\n",
     "# to avoid the following error:\n",
     "# WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
     "def denormalize(tensor):\n",
