--- a/xray.ipynb
+++ b/xray.ipynb
@@ -70,14 +70,14 @@
     "from model.local_net import LocalNet\n",
     "from model.model_utils import load_resnet_18_teacher_model\n",
     "from model.student_training_module import StudentTrainingModule\n",
-    "from data_loader.mvtec_data_loader import MVTecDataModule\n",
+    "from data_loader.localnet_data_loader import LocalNetDataModule\n",
     "from model.one_layer_decoder import OneLayerDecoder\n",
     "from model.dad import DADHead\n",
     "from model.iad import iad_head\n",
     "from model.global_net import GlobalNet\n",
     "from data_loader.joint_training_data_loader import JointTrainingDataModule\n",
     "from model.joint_training_module import JointGlobalDADTrainingModule\n",
-    "from data_loader.mvtec_inference_data_loader import MVTecInferenceDataModule\n",
+    "from data_loader.inference_data_loader import InferenceDataModule\n",
     "from model.anomaly_detector import AnomalyDetector\n",
     "\n",
     "# autoreload imported modules\n",
@@ -209,9 +209,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_module = MVTecDataModule(\n",
-    "    train_image_paths, \n",
-    "    val_image_paths, \n",
+    "data_module = LocalNetDataModule(\n",
+    "    train_file_paths, \n",
+    "    val_file_paths, \n",
     "    batch_size=config['batch_size'], \n",
     "    num_workers=4, \n",
     "    caching_strategy='none'\n",
@@ -228,7 +228,7 @@
     "\n",
     "BATCH_SIZE=config['batch_size']\n",
     "\n",
-    "# Reverse the normalization process done by ImageNetDataModule\n",
+    "# Reverse the normalization process done by LocalNetDataModule\n",
     "# to avoid the following error:\n",
     "# WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
     "def denormalize(tensor):\n",
@@ -342,7 +342,7 @@
     "# Need to calculate max_epochs\n",
     "total_iterations = config['iterations']\n",
     "batch_size = config['batch_size']\n",
-    "num_training_images = len(train_image_paths)\n",
+    "num_training_images = len(train_file_paths)\n",
     "# Calculate max_epochs\n",
     "max_epochs = total_iterations / (num_training_images / batch_size)\n",
     "max_epochs = int(max_epochs) + (max_epochs % 1 > 0)  # round up if not an integer\n",
@@ -511,15 +511,15 @@
    "outputs": [],
    "source": [
     "data_module = JointTrainingDataModule(\n",
-    "    train_image_paths, \n",
-    "    val_image_paths, \n",
+    "    train_file_paths, \n",
+    "    val_file_paths, \n",
     "    batch_size=config['batch_size'], \n",
     "    num_workers=2, \n",
     "    caching_strategy='at-init'\n",
     ")\n",
     "\n",
-    "print(f\"Number of training images: {len(train_image_paths)}\")\n",
-    "print(f\"Number of validation images: {len(val_image_paths)}\")"
+    "print(f\"Number of training images: {len(train_file_paths)}\")\n",
+    "print(f\"Number of validation images: {len(val_file_paths)}\")"
    ]
   },
   {
@@ -539,7 +539,7 @@
     "\n",
     "BATCH_SIZE=4\n",
     "\n",
-    "# Reverse the normalization process done by ImageNetDataModule\n",
+    "# Reverse the normalization process done by LocalNetDataModule\n",
     "# to avoid the following error:\n",
     "# WARNING:matplotlib.image:Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n",
     "def denormalize(tensor):\n",
@@ -659,7 +659,7 @@
     "# Need to calculate max_epochs\n",
     "total_iterations = config['iterations']\n",
     "batch_size = config['batch_size']\n",
-    "num_training_images = len(train_image_paths)\n",
+    "num_training_images = len(train_file_paths)\n",
     "# Calculate max_epochs\n",
     "max_epochs = total_iterations / (num_training_images / batch_size)\n",
     "max_epochs = int(max_epochs) + (max_epochs % 1 > 0)  # round up if not an integer\n",
@@ -790,6 +790,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Mount current Colab session to Google Drive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Will provide you with an authentication link\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get file paths to all test images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pathologies = [\n",
+    "        'absent_septum',\n",
+    "        'artefacts',\n",
+    "        'craniatomy',\n",
+    "        'dural',\n",
+    "        'ea_mass',\n",
+    "        'edema',\n",
+    "        'encephalomalacia',\n",
+    "        'enlarged_ventricles',\n",
+    "        'intraventricular',\n",
+    "        'lesions',\n",
+    "        'mass',\n",
+    "        'posttreatment',\n",
+    "        'resection',\n",
+    "        'sinus',\n",
+    "        'wml',\n",
+    "        'other'\n",
+    "    ]\n",
+    "\n",
+    "split_dir = \"./data/splits\"\n",
+    "\n",
+    "img_csvs = [os.path.join(split_dir, f'{pathology}.csv') for pathology in pathologies]\n",
+    "\n",
+    "test_file_paths = []\n",
+    "\n",
+    "for i in range(len(img_csvs)):\n",
+    "  test_file_paths += pd.read_csv(img_csvs[i])['filename'].tolist()\n",
+    "\n",
+    "print(test_file_paths)\n",
+    "print(len(test_file_paths))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Create dataloader"
    ]
   },
@@ -799,7 +861,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data_module = MVTecInferenceDataModule(\n",
+    "test_data_module = InferenceDataModule(\n",
     "    test_file_paths, \n",
     "    batch_size=1, \n",
     "    num_workers=0, \n",
@@ -927,13 +989,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "image = images[3]\n",
-    "anomaly_score_map = anomaly_detector.detect_anomalies(image.unsqueeze(0))"
+    "Get anomaly scores for each image in batch"
    ]
   },
   {
@@ -942,44 +1001,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.colors import Normalize\n",
-    "from PIL import Image\n",
-    "from scipy.ndimage import gaussian_filter\n",
-    "\n",
-    "# Apply a Gaussian blur to the anomaly map\n",
-    "smoothed_anomaly_map = gaussian_filter(anomaly_score_map, sigma=5)  # You can adjust the sigma value\n",
-    "\n",
-    "# Visualize the smoothed anomaly map\n",
-    "plt.imshow(smoothed_anomaly_map, cmap='jet')  # Using the same colormap\n",
-    "plt.colorbar()  # To see the range of values on the smoothed anomaly score map\n",
-    "plt.axis('off')  # Turn off axis numbers and ticks\n",
-    "plt.show()\n",
-    "\n",
-    "# Convert to numpy array and transpose to HWC format for image display\n",
-    "image_np = image.cpu().detach().numpy().transpose(1, 2, 0)\n",
-    "image_pil = Image.fromarray((image_np * 255).astype(np.uint8))\n",
-    "\n",
-    "# Normalize the resized anomaly map to the range [0, 1]\n",
-    "normalized_anomaly_map = (smoothed_anomaly_map - np.min(smoothed_anomaly_map)) / (np.max(smoothed_anomaly_map) - np.min(smoothed_anomaly_map))\n",
-    "\n",
-    "# Apply a colormap to the normalized anomaly map\n",
-    "colormap = plt.cm.jet\n",
-    "normed_data = Normalize(0, 1)(normalized_anomaly_map)\n",
-    "mapped_data = colormap(normed_data)\n",
-    "\n",
-    "# Convert the RGBA image to an RGB image\n",
-    "mapped_data_rgb = (mapped_data[..., :3] * 255).astype(np.uint8)\n",
-    "\n",
-    "# Overlay the colored anomaly map onto the original image\n",
-    "blended_image = Image.blend(image_pil.convert(\"RGBA\"), Image.fromarray(mapped_data_rgb).convert(\"RGBA\"), alpha=0.48)\n",
-    "\n",
-    "# Show the blended image\n",
-    "plt.imshow(blended_image)\n",
-    "plt.axis('off')  # Turn off axis numbers and ticks\n",
-    "plt.show()\n"
+    "anomaly_score_maps = anomaly_detector.detect_anomalies_batch(images)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize blended images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "for image, anomaly_map in zip(images, anomaly_score_maps):\n",
+    "  save_path = f\"/content/output/image{i}.png\"\n",
+    "  numpy_save_path = f\"/content/numpy_output/image{i}.npy\"\n",
+    "  anomaly_detector.visualize_anomaly(image, anomaly_map, save_path, numpy_save_path)\n",
+    "  i += 1"
    ]
   }
  ],
