--- a/pretraining_localnet.ipynb
+++ b/pretraining_localnet.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "from model.local_net import LocalNet\n",
     "from model.model_utils import load_resnet_18_teacher_model\n",
-    "from model.student_training_module import StudentTrainingModule\n",
+    "from training_module.student_training_module import StudentTrainingModule\n",
     "from data_loader.localnet_data_loader import LocalNetDataModule\n",
     "from model.one_layer_decoder import OneLayerDecoder\n",
     "\n",
