--- a/xray.ipynb
+++ b/xray.ipynb
@@ -69,14 +69,14 @@
     "\n",
     "from model.local_net import LocalNet\n",
     "from model.model_utils import load_resnet_18_teacher_model\n",
-    "from model.student_training_module import StudentTrainingModule\n",
+    "from training_module.student_training_module import StudentTrainingModule\n",
     "from data_loader.localnet_data_loader import LocalNetDataModule\n",
     "from model.one_layer_decoder import OneLayerDecoder\n",
     "from model.dad import DADHead\n",
     "from model.iad import iad_head\n",
     "from model.global_net import GlobalNet\n",
     "from data_loader.joint_training_data_loader import JointTrainingDataModule\n",
-    "from model.joint_training_module import JointGlobalDADTrainingModule\n",
+    "from training_module.joint_training_module import JointGlobalDADTrainingModule\n",
     "from data_loader.inference_data_loader import InferenceDataModule\n",
     "from model.anomaly_detector import AnomalyDetector\n",
     "\n",
