--- a/training_global_dad.ipynb
+++ b/training_global_dad.ipynb
@@ -64,7 +64,7 @@
     "from model.iad import iad_head\n",
     "from model.global_net import GlobalNet\n",
     "from data_loader.joint_training_data_loader import JointTrainingDataModule\n",
-    "from model.joint_training_module import JointGlobalDADTrainingModule\n",
+    "from training_module.joint_training_module import JointGlobalDADTrainingModule\n",
     "\n",
     "# autoreload imported modules\n",
     "%load_ext autoreload\n",
