--- a/inference_mvtec.ipynb
+++ b/inference_mvtec.ipynb
@@ -57,7 +57,7 @@
     "from model.iad import iad_head\n",
     "from model.global_net import GlobalNet\n",
     "from data_loader.inference_data_loader import InferenceDataModule\n",
-    "from model.anomaly_detector import AnomalyDetector\n",
+    "from anomaly_detector import AnomalyDetector\n",
     "\n",
     "# autoreload imported modules\n",
     "%load_ext autoreload\n",
