--- a/pretraining_localnet.ipynb
+++ b/pretraining_localnet.ipynb
@@ -61,7 +61,7 @@
     "from google.colab import drive\n",
     "\n",
     "from model.local_net import LocalNet\n",
-    "from model.model_utils import load_resnet_18_teacher_model\n",
+    "from utils.model_utils import load_resnet_18_teacher_model\n",
     "from training_module.student_training_module import StudentTrainingModule\n",
     "from data_loader.localnet_data_loader import LocalNetDataModule\n",
     "from model.one_layer_decoder import OneLayerDecoder\n",
