--- a/xray.ipynb
+++ b/xray.ipynb
@@ -68,7 +68,7 @@
     "import pandas as pd\n",
     "\n",
     "from model.local_net import LocalNet\n",
-    "from model.model_utils import load_resnet_18_teacher_model\n",
+    "from utils.model_utils import load_resnet_18_teacher_model\n",
     "from training_module.student_training_module import StudentTrainingModule\n",
     "from data_loader.localnet_data_loader import LocalNetDataModule\n",
     "from model.one_layer_decoder import OneLayerDecoder\n",
@@ -78,7 +78,7 @@
     "from data_loader.joint_training_data_loader import JointTrainingDataModule\n",
     "from training_module.joint_training_module import JointGlobalDADTrainingModule\n",
     "from data_loader.inference_data_loader import InferenceDataModule\n",
-    "from model.anomaly_detector import AnomalyDetector\n",
+    "from anomaly_detector import AnomalyDetector\n",
     "\n",
     "# autoreload imported modules\n",
     "%load_ext autoreload\n",
