--- a/xray.ipynb
+++ b/xray.ipynb
@@ -66,6 +66,7 @@
     "from google.colab import drive\n",
     "import os\n",
     "import pandas as pd\n",
+    "import sklearn\n",
     "\n",
     "from model.local_net import LocalNet\n",
     "from utils.model_utils import load_resnet_18_teacher_model\n",
@@ -79,6 +80,8 @@
     "from training_module.joint_training_module import JointGlobalDADTrainingModule\n",
     "from data_loader.inference_data_loader import InferenceDataModule\n",
     "from anomaly_detector import AnomalyDetector\n",
+    "from data_loader.test_data_loader import get_all_test_dataloaders\n",
+    "\n",
     "\n",
     "# autoreload imported modules\n",
     "%load_ext autoreload\n",
@@ -863,7 +866,7 @@
    "source": [
     "test_data_module = InferenceDataModule(\n",
     "    test_file_paths, \n",
-    "    batch_size=1, \n",
+    "    batch_size=4, \n",
     "    num_workers=0, \n",
     "    caching_strategy='none'\n",
     ")"
@@ -1017,12 +1020,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i = 0\n",
     "for image, anomaly_map in zip(images, anomaly_score_maps):\n",
-    "  save_path = f\"/content/output/image{i}.png\"\n",
-    "  numpy_save_path = f\"/content/numpy_output/image{i}.npy\"\n",
-    "  anomaly_detector.visualize_anomaly(image, anomaly_map, save_path, numpy_save_path)\n",
-    "  i += 1"
+    "  anomaly_detector.visualize_anomaly(image, anomaly_map, alpha=0.7, cmap=plt.cm.plasma)"
    ]
   }
  ],
