Added visualization of data

--- a/xray.ipynb
+++ b/xray.ipynb
@@ -80,7 +80,7 @@
     "from training_module.joint_training_module import JointGlobalDADTrainingModule\n",
     "from data_loader.inference_data_loader import InferenceDataModule\n",
     "from anomaly_detector import AnomalyDetector\n",
-    "from data_loader.test_data_loader import get_all_test_dataloaders\n",
+    "from data_loader.test_data_loader import TestDataModule\n",
     "\n",
     "\n",
     "# autoreload imported modules\n",
@@ -1022,6 +1022,260 @@
    "source": [
     "for image, anomaly_map in zip(images, anomaly_score_maps):\n",
     "  anomaly_detector.visualize_anomaly(image, anomaly_map, alpha=0.7, cmap=plt.cm.plasma)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate on one specific pathology"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create data loader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split_dir = \"/content/data/splits\"\n",
+    "test_data_module = TestDataModule(split_dir, batch_size=8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Display images and binary masks for one specific pathology"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "images, gt_masks = next(iter(test_data_module.test_dataloader(\"resection\")))\n",
+    "\n",
+    "SIZE = len(images)\n",
+    "\n",
+    "fig, ax = plt.subplots(2, SIZE, figsize=(15, 3))\n",
+    "\n",
+    "for i in range(SIZE):\n",
+    "    ax[0][i].imshow(images[i].permute(1, 2, 0).cpu().numpy())\n",
+    "    ax[1][i].imshow(gt_masks[i].permute(1, 2, 0).cpu().numpy(), cmap='gray')\n",
+    "    ax[0][i].axis('off')\n",
+    "    ax[1][i].axis('off')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Display images and binary masks for all pathologies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "images, gt_masks = next(iter(test_data_module.test_dataloader_all()))\n",
+    "\n",
+    "fig, ax = plt.subplots(2, 20, figsize=(25, 2))\n",
+    "\n",
+    "for i in range(20):\n",
+    "    ax[0][i].imshow(images[i].permute(1, 2, 0).cpu().numpy())\n",
+    "    ax[1][i].imshow(gt_masks[i].permute(1, 2, 0).cpu().numpy(), cmap='gray')\n",
+    "    ax[0][i].axis('off')\n",
+    "    ax[1][i].axis('off')\n",
+    "    \n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images, gt_masks = next(iter(test_data_module.test_dataloader(\"resection\")))\n",
+    "results = anomaly_detector.evaluate_performance(images, gt_masks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "precision, recall = results['PRC']\n",
+    "average_precision = results['AVG_PRECISION']\n",
+    "\n",
+    "# Plotting the Precision-Recall curve\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.plot(recall, precision, label=f'AP={average_precision:0.2f}')\n",
+    "plt.xlabel('Recall')\n",
+    "plt.ylabel('Precision')\n",
+    "plt.title('Precision-Recall curve')\n",
+    "plt.legend(loc='lower left')\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fpr = results['FPR']\n",
+    "tpr = results['TPR']\n",
+    "roc_auc = results['AUROC']\n",
+    "# Plotting the ROC curve\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.plot(fpr, tpr, color='blue', label=f'ROC curve (area = {roc_auc:0.2f})')\n",
+    "plt.plot([0, 1], [0, 1], color='darkorange', linestyle='--')  # Diagonal line for reference\n",
+    "plt.xlim([0.0, 1.0])\n",
+    "plt.ylim([0.0, 1.05])\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.title('Receiver Operating Characteristic (ROC) Curve')\n",
+    "plt.legend(loc='lower right')\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get AUROC/Average precision per pathology"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pathologies = [\n",
+    "        'absent_septum',\n",
+    "        'artefacts',\n",
+    "        'craniatomy',\n",
+    "        'dural',\n",
+    "        'ea_mass',\n",
+    "        'edema',\n",
+    "        'encephalomalacia',\n",
+    "        'enlarged_ventricles',\n",
+    "        'intraventricular',\n",
+    "        'lesions',\n",
+    "        'mass',\n",
+    "        'posttreatment',\n",
+    "        'resection',\n",
+    "        'sinus',\n",
+    "        'wml',\n",
+    "        'other'\n",
+    "    ]\n",
+    "\n",
+    "results_json = []\n",
+    "\n",
+    "for pathology in pathologies:\n",
+    "    images, gt_masks = next(iter(test_data_module.test_dataloader(pathology)))\n",
+    "    results = anomaly_detector.evaluate_performance(images, gt_masks)\n",
+    "    results_json.append({'pathology': pathology, 'auroc': results['AUROC'], 'avg_precision': results['AVG_PRECISION']})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch  # If not already imported\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "images, gt_masks = next(iter(test_data_module.test_dataloader_all()))\n",
+    "results = anomaly_detector.detect_anomalies_batch(images.to(device))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create histograms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "# Let's assume 'results' is a list of numpy arrays, where each array corresponds to the anomaly scores of an image in the batch\n",
+    "# For example: results = [np.array([...]), np.array([...]), ...]\n",
+    "# And 'gt_masks' is a batch of ground truth masks with the same batch size as 'results'\n",
+    "\n",
+    "# Flatten the ground truth masks to match the anomaly scores\n",
+    "ground_truth_masks = gt_masks.numpy().flatten()\n",
+    "\n",
+    "# Flatten all anomaly score arrays to create a single array of scores\n",
+    "anomaly_scores = np.concatenate([scores.flatten() for scores in results])\n",
+    "\n",
+    "# Now, separate the scores based on the ground truth masks\n",
+    "scores_normal = anomaly_scores[ground_truth_masks == 0]\n",
+    "scores_abnormal = anomaly_scores[ground_truth_masks == 1]\n",
+    "\n",
+    "BINS = 100\n",
+    "\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "\n",
+    "# Histogram for normal scores\n",
+    "sns.histplot(\n",
+    "    scores_normal,\n",
+    "    bins=BINS,\n",
+    "    kde=True,\n",
+    "    label=\"Normal\",\n",
+    "    color=\"#3d5a80\",\n",
+    ")\n",
+    "\n",
+    "# Histogram for abnormal scores\n",
+    "sns.histplot(\n",
+    "    scores_abnormal,\n",
+    "    bins=BINS,\n",
+    "    kde=True,\n",
+    "    label=\"Abnormal\",\n",
+    "    color=\"#ee6c4d\",\n",
+    ")\n",
+    "\n",
+    "plt.title(\"Histogram of Anomaly Scores\")\n",
+    "plt.xlim(left=0)\n",
+    "plt.xlabel(\"Anomaly Score\")\n",
+    "plt.ylabel(\"Density\")\n",
+    "plt.legend()\n",
+    "plt.show()\n"
    ]
   }
  ],
