Small bug fixes

--- a/xray.ipynb
+++ b/xray.ipynb
@@ -1045,7 +1045,7 @@
    "outputs": [],
    "source": [
     "split_dir = \"/content/data/splits\"\n",
-    "test_data_module = TestDataModule(split_dir, batch_size=8)"
+    "test_data_module = TestDataModule(split_dir)"
    ]
   },
   {
