File name change

--- a/brain_mri.ipynb
+++ b/brain_mri.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# X-ray"
+    "# Brain MRI"
    ]
   },
   {
@@ -786,24 +786,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inference"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Mount current Colab session to Google Drive"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Will provide you with an authentication link\n",
-    "drive.mount('/content/drive')"
+    "# Visualizing data created during inference"
    ]
   },
   {
@@ -974,9 +957,9 @@
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "# Load all state dictionary from Google Drive\n",
-    "local_state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/LocalNet/Fine-tuning/X-ray/Trained Models/V1/local_net_finetuned_xray_v1.pth', map_location=device)\n",
-    "global_state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/X-ray/Trained Models/V1/global_net_xray_v1.pth', map_location=device)\n",
-    "dad_state_dict = torch.load('/content/drive/MyDrive/AnomalyDetection/GlobalNet_DAD/X-ray/Trained Models/V1/dad_head_xray_v1.pth', map_location=device)\n",
+    "local_state_dict = torch.load('/content/pretrained_models/local_net_finetuned_xray_v1.pth', map_location=device)\n",
+    "global_state_dict = torch.load('/content/pretrained_models/global_net_xray_v1.pth', map_location=device)\n",
+    "dad_state_dict = torch.load('/content/pretrained_models/dad_head_xray_v1.pth', map_location=device)\n",
     "\n",
     "# Initialise all networks\n",
     "local_net = LocalNet().to(device)\n",
